--- a/pom.xml
+++ b/pom.xml
@@ -40,10 +40,18 @@
 	        <artifactId>h2</artifactId>
 	        <scope>runtime</scope>
 	    </dependency>
+	    
+	    <dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
